db.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-pod
  labels:
    db: postgres
    app: webapp
spec:
  containers:
  - name: postgres
    image: postgres
    ports:
    - containerPort: 5432
---

kind: Service
apiVersion: v1
metadata:
  name: postgres-service
  labels:
    app: webapp
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
