kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - image: weighttracker.azurecr.io/weight-tracker
        name: weight-tracker
      imagePullSecrets:
      - name: regcred

---

kind: Service
apiVersion: v1
metadata:
  name: dogs-service
spec:
  selector:
    app: dogs
  ports:
    - port: 5678
